--- a/index.html
+++ b/index.html
@@ -290,16 +290,16 @@
           </div>
           <div class="col-md-8 col-xl-9 order-0 order-md-1">
             <h2 class="mb-3 text-5 text-uppercase text-center text-md-left">Wanna Talk?</h2>
-			<form id="contact-form" data-netlify="true" method="post" name="contactme">
+			<form id="contact-form" method="POST" data-netlify="true" name="contactme">
               <div class="row">
                 <div class="col-xl-6">
                   <div class="form-group">
-                    <input name="Name" type="text" class="form-control" required placeholder="Name">
+                    <input name="NAME" type="text" class="form-control" required placeholder="Name">
                   </div>
                 </div>
                 <div class="col-xl-6">
                   <div class="form-group">
-                    <input name="Email" type="email" class="form-control" required placeholder="Email">
+                    <input name="EMAIL" type="email" class="form-control" required placeholder="Email">
                   </div>
                 </div>
               </div>
@@ -307,7 +307,7 @@
                 <textarea name="form-message" class="form-control" rows="5" required placeholder="Tell Whatever You Feel to say"></textarea>
               </div>
               <p class="text-center mt-4 mb-0">
-			           	<button id="submit-btn" class="btn btn-primary rounded-pill d-inline-flex" type="submit">Send Message</button>
+			           	<button id="submit-btn" class="btn btn-primary rounded-pill d-inline-flex" type="submit" name="submit">Send Message</button>
               </p>
             </form>
           </div>
