--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
     <div class="container px-lg-5">
       <div class="row">
         <div class="col-lg-6 text-center text-lg-left">
-          <p class="mb-3 mb-lg-0">Copyright © 2020 <a href="#">Fizen</a>. All Rights Reserved.</p>
+          <p class="mb-3 mb-lg-0">Copyright © 2020 <a href="#">Fizen</a></p>
         </div>
       </div>
     </div>
