--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               <ul class="list-style-2">
                 <li class=""><span class="font-weight-600 mr-2">Name:</span>Vishesh Koul</li>
                 <li class=""><span class="font-weight-600 mr-2">Email:</span><a href="mailto:visheshkoul@gmail.com">visheshkoul@gmail.com</a></li>
-                <li class=""><span class="font-weight-600 mr-2">Age:</span>21</li>
+                <li class=""><span class="font-weight-600 mr-2">Age:</span><span id="age"></span></li>
                 <li class="border-0"><span class="font-weight-600 mr-2">From:</span>Delhi, India</li>
               </ul>
               <a onclick="window.open('Resume.pdf')" class="btn btn-primary rounded-pill smooth-scroll">Download CV</a> </div>
