--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
               <div class="col-12 text-center">
                 <div class="typed-strings">
                   <p>I'm Vishesh</p>
-                  <p> I like Photography.</p>
-                  <p>I like creative Designs.</p>
+                  <p>I'm a Web Developer</p>
+                  <p>I like Photography</p>
                 </div>
                 <p class="text-7 font-weight-500 text-white mb-2 mb-md-3">Welcome</p>
                 <h2 class="text-16 font-weight-600 text-white mb-2 mb-md-3"><span class="typed"></span></h2>
@@ -144,7 +144,8 @@
       <div class="container px-lg-5" > 
         <!-- Heading -->
         <div class="position-relative d-flex text-center mb-5" >
-        <p class="text-9 text-dark font-weight-600 position-absolute w-100 align-self-center line-height-4 mb-0">What Do I Do?<span class="heading-separator-line border-bottom border-3 border-primary position-abolute d-block mx-auto"></span> </p>
+          <h2 class="text-24 text-light opacity-4 text-uppercase font-weight-600 w-100 mb-0">Skills</h2>
+        <p class="text-9 text-dark font-weight-600 position-absolute w-100 align-self-center line-height-4 mb-0">What I Do<span class="heading-separator-line border-bottom border-3 border-primary position-abolute d-block mx-auto"></span> </p>
         </div><br>
         <!-- Heading end-->
         
@@ -155,7 +156,14 @@
                 <div class="featured-box style-3 mb-5">
                   <div class="featured-box-icon text-primary bg-white shadow-sm rounded"> <i class="fas fa-palette"></i> </div>
                   <h3>Photography</h3>
-                  <p class="mb-0">Not considering it as a professional base. But I do like Photography as a hobby</p>
+                  <p class="mb-0">I like Photography as a hobby</p>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="featured-box style-3 mb-5">
+                  <div class="featured-box-icon text-primary bg-white shadow-sm rounded"> <i class="fa-regular fas fa-briefcase"></i> </div>
+                  <h3>Freelancer</h3>
+                  <p class="mb-0">I create landing pages for private business and companies to satisfy their needs</p>
                 </div>
               </div>
               <div class="col-md-6" >
@@ -169,14 +177,14 @@
               <div class="featured-box style-3 mb-5">
                 <div class="featured-box-icon text-primary bg-white shadow-sm rounded"> <i class="fas fa-palette"></i> </div>
                 <h3>Enginnering</h3>
-                <p class="mb-0">Currently Pursuing Engineering</p>
+                <p class="mb-0">I am currently pursuing B.Tech in Computer Science from M.D.U, Rohtak</p>
               </div>
               </div>
               <div class="col-md-6" >
               <div class="featured-box style-3 mb-5">
                 <div class="featured-box-icon text-primary bg-white shadow-sm rounded"> <i class="fas fa-palette"></i> </div>
                 <h3>Internship</h3>
-                <p class="mb-0">Currently an intern at CuriousJr.</p>
+                <p class="mb-0">I am working as FrontEnd Web Developer L2 intern</p>
               </div>
               </div>
             </div>
@@ -209,13 +217,13 @@
             <div class="bg-white border rounded p-4 mb-4">
               <p class="badge badge-primary text-2 font-weight-400">Completed (2016-2018)</p>
               <h3 class="text-5">Higher Secondary Education</h3>
-              <p class="text-danger">St. Joseph's Academy, Savita Vihar</p>
+              <p class="text-secondary">St. Joseph's Academy, Savita Vihar</p>
               <p class="mb-0">Class 11<sup>th</sup> - 12<sup>th</sup></p>
             </div>
             <div class="bg-white border rounded p-4 mb-4">
-              <p class="badge badge-primary text-2 font-weight-400 clgtime">2018-<span id="clg"></span></p>
+              <p class="badge badge-primary text-2 font-weight-400">Completed (2018-2022)</p>
               <h3 class="text-5">Bachlor's Degree (B.Tech)</h3>
-              <p class="text-danger">Maharshi Dayanand University (M.D.U), Rohtak</p>
+              <p class="text-secondary">Maharshi Dayanand University (M.D.U), Rohtak</p>
               <p class="mb-0">Currently pursuing engineering bachlor's degree in Computer Science </p>
             </div>
           </div>
@@ -226,17 +234,17 @@
             <div class="bg-white border rounded p-4 mb-4">
               <h2 class="text-5">Vahin Printers</h2>
               <p class="mb-0">Created a website as portfolio of business of excellent printing company</p><br>
-              <p><a href="https://www.vahinprinters.tk/"><button class="btn btn-outline-dark btn-sm">Show</button></a></p>
+              <p><a href="https://www.vahinprinters.ml/"><button class="btn btn-outline-dark btn-sm">Show</button></a></p>
             </div>
             <div class="bg-white border rounded p-4 mb-4">
               <h2 class="text-5">Blozierga</h2>
               <p class="mb-0">A blogging Site where people can post anonymous Heading and content without having to sign up or reveal. Working on MongoAtlas and Node.js</p><br>
-              <p><a href="https://blogmdu.herokuapp.com/"><button class="btn btn-outline-dark btn-sm">Show</button></a></p>
+              <p><a href="https://blogmeta.herokuapp.com/"><button class="btn btn-outline-dark btn-sm">Show</button></a></p>
             </div>
             <div class="bg-white border rounded p-4 mb-4">
               <h2 class="text-5">Todo List</h2>
-              <p class="mb-0">A basic todo List to keep and remove the data(list items)</p><br>
-              <p><a href="https://notipedia.herokuapp.com/"><button class="btn btn-outline-dark btn-sm">Show</button></a></p>
+              <p class="mb-0">This is a to-do list created to create your upcoming tasks and delete them</p><br>
+              <p><a href="https://notipedia.herokuapp.com/home"><button class="btn btn-outline-dark btn-sm">Show</button></a></p>
             </div>
           </div>
           <div class="text-center mt-5" style="margin:0 auto;"><a onclick="window.open('Resume.pdf')" class="btn btn-outline-dark rounded-pill smooth-scroll">Download CV <span class="ml-1"><i class="fas fa-download"></i></span></a></div>
@@ -250,27 +258,38 @@
 		<h2 class="text-6 font-weight-600 mt-4 mb-4">My Skills</h2>
         <div class="row">
           <div class="col-md-6">
-            <p class="text-dark font-weight-500 text-left mb-2">Website Design <span class="float-right">75%</span></p>
+            <p class="text-dark font-weight-500 text-left mb-2">Website Design <span class="float-right">85%</span></p>
             <div class="progress progress-sm mb-4">
-              <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-            <p class="text-dark font-weight-500 text-left mb-2">HTML/CSS <span class="float-right">90%</span></p>
+            <p class="text-dark font-weight-500 text-left mb-2">HTML5 / CSS3 <span class="float-right">90%</span></p>
             <div class="progress progress-sm mb-4">
               <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-            <p class="text-dark font-weight-500 text-left mb-2">JavaScript <span class="float-right">60%</span></p>
+            <p class="text-dark font-weight-500 text-left mb-2">JavaScript <span class="float-right">80%</span></p>
             <div class="progress progress-sm mb-4">
-              <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
           <div class="col-md-6">
-            <p class="text-dark font-weight-500 text-left mb-2">jQuery<span class="float-right">80%</span></p>
+            <p class="text-dark font-weight-500 text-left mb-2">jQuery<span class="float-right">90%</span></p>
             <div class="progress progress-sm mb-4">
-              <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
             <p class="text-dark font-weight-500 text-left mb-2">Bootstrap <span class="float-right">90%</span></p>
             <div class="progress progress-sm mb-4">
               <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <p class="text-dark font-weight-500 text-left mb-2">React <span class="float-right">50%</span></p>
+            <div class="progress progress-sm mb-4">
+              <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+          
+          <div class="col-md-6">
+            <p class="text-dark font-weight-500 text-left mb-2">Node.js<span class="float-right">65%</span></p>
+            <div class="progress progress-sm mb-4">
+              <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
         </div>
