--- a/index.html
+++ b/index.html
@@ -232,12 +232,12 @@
           <div class="col-md-6">
             <h2 class="text-6 font-weight-600 mb-4">My Experience</h2>
             <div class="bg-white border rounded p-4 mb-4">
-              <h2 class="text-5">Vahin Printers</h2>
-              <p class="mb-0">Created a website as portfolio of business of excellent printing company</p><br>
-              <p><a href="https://www.vahinprinters.ml/"><button class="btn btn-outline-dark btn-sm">Show</button></a></p>
+              <h2 class="text-5">Mapping Consultants</h2>
+              <p class="mb-0">Created a website as portfolio of architectural firm</p><br>
+              <p><a href="https://www.mappingconsultants.tk/"><button class="btn btn-outline-dark btn-sm">Show</button></a></p>
             </div>
             <div class="bg-white border rounded p-4 mb-4">
-              <h2 class="text-5">Blozierga</h2>
+              <h2 class="text-5">BlogMeta</h2>
               <p class="mb-0">A blogging Site where people can post anonymous Heading and content without having to sign up or reveal. Working on MongoAtlas and Node.js</p><br>
               <p><a href="https://blogmeta.herokuapp.com/"><button class="btn btn-outline-dark btn-sm">Show</button></a></p>
             </div>
