--- a/index.html
+++ b/index.html
@@ -207,30 +207,36 @@
         <div class="row"> 
           <!-- My Education -->
           <div class="col-md-6">
-            <h2 class="text-6 font-weight-600 mb-4">My Education</h2>
+            <h2 class="text-6 font-weight-600 mb-4">My Experience</h2>
             <div class="bg-white border rounded p-4 mb-4">
-              <p class="badge badge-primary text-2 font-weight-400">Completed (2006 - 2016)</p>
+              <p class="badge badge-primary text-2 font-weight-500">Completed (2006 - 2016)</p>
               <h3 class="text-5">High School</h3>
               <p class="text-secondary">St. Joseph's Academy, Savita Vihar</p>
               <p class="mb-0">From class 1<sup>st</sup> - 10<sup>th</sup></p>
             </div>
             <div class="bg-white border rounded p-4 mb-4">
-              <p class="badge badge-primary text-2 font-weight-400">Completed (2016-2018)</p>
+              <p class="badge badge-primary text-2 font-weight-500">Completed (2016-2018)</p>
               <h3 class="text-5">Higher Secondary Education</h3>
               <p class="text-secondary">St. Joseph's Academy, Savita Vihar</p>
               <p class="mb-0">Class 11<sup>th</sup> - 12<sup>th</sup></p>
             </div>
             <div class="bg-white border rounded p-4 mb-4">
-              <p class="badge badge-primary text-2 font-weight-400">Completed (2018-2022)</p>
+              <p class="badge badge-primary text-2 font-weight-500">Completed (2018-2022)</p>
               <h3 class="text-5">Bachlor's Degree (B.Tech)</h3>
               <p class="text-secondary">Maharshi Dayanand University (M.D.U), Rohtak</p>
-              <p class="mb-0">Currently pursuing engineering bachlor's degree in Computer Science </p>
+              <p class="mb-0">Completed B.Tech in Computer Science from MDU</p>
+            </div>
+            <div class="bg-white border rounded p-4 mb-4">
+              <p class="badge badge-warning text-2 font-weight-500">   Ongoing (2022 - Present)   </p>
+              <h3 class="text-5">Cloud Engineer</h3>
+              <p class="text-secondary">Hanu Software</p>
+              <p class="mb-0">Currently working as Cloud Engineer at Hanu Software Solutions </p>
             </div>
           </div>
           
           <!-- My Experience -->
           <div class="col-md-6">
-            <h2 class="text-6 font-weight-600 mb-4">My Experience</h2>
+            <h2 class="text-6 font-weight-600 mb-4">My Project</h2>
             <div class="bg-white border rounded p-4 mb-4">
               <h2 class="text-5">Mapping Consultants</h2>
               <p class="mb-0">Created a website as portfolio of architectural firm</p><br>
