--- a/index.html
+++ b/index.html
@@ -316,12 +316,12 @@
           <div class="col-md-4 col-xl-3 order-1 order-md-0 text-center text-md-left mt-5 mt-md-0">
             <h2 class="mb-3 text-5 text-uppercase">Address</h2>
             <p class="text-3 mb-4">New-Delhi<br>
-            <!-- <p class="text-3 mb-1"><span class="text-primary text-4 mr-2"><i class="fas fa-phone"></i></span>+91 9999092081</p> -->
             <p class="text-3 mb-4"><span class="text-primary text-4 mr-2"><i class="fas fa-envelope"></i></span>visheshkoul@gmail.com</p>
             <h2 class="mb-3 text-5 text-uppercase">Follow Me</h2>
             <ul class="social-icons ml-md-n2 justify-content-center justify-content-md-start">
               <li class="social-icons-facebook"><a data-toggle="tooltip" href="https://www.facebook.com/Vishesh.1201/" target="_blank" title="" data-original-title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
               <li class="social-icons-github"><a data-toggle="tooltip" href="http://www.github.com/fizen1201" target="_blank" title="" data-original-title="GitHub"><i class="fab fa-github"></i></a></li>
+              <li class="fab fa-brands fa-linkedin"><a data-toggle="tooltip" href="https://www.linkedin.com/in/vishesh1201/" target="_blank" title="" data-original-title="Linkedin"><i class="fas fa-brands fa-linkedin"></i></a></li>
             </ul>
           </div>
           <div class="col-md-8 col-xl-9 order-0 order-md-1">
