--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <!-- Logo --> 
         <a href="index.html" class="mb-lg-auto mt-lg-4">
 			<span class="bg-dark-2 rounded-pill p-2 mb-lg-1 d-none d-lg-inline-block">
-				<img class="img-fluid rounded-pill d-block" src="images/profile.png" title="I'm Vishesh" alt="">
+				<img class="img-fluid rounded-pill d-block" src="images/newdpcmpr.jpg" title="I'm Vishesh" alt="">
 			</span>
 			<h1 class="text-5 text-white text-center mb-0 d-lg-block">Vishesh</h1>
         </a> 
