--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
-<title>Vishesh - Personal Profile</title>
+<title>Vishesh - Personal Portfolio</title>
 
 <!-- Web Fonts -->
 <link rel="stylesheet" href="css/css.css" type="text/css">
@@ -92,8 +92,9 @@
               <div class="col-12 text-center">
                 <div class="typed-strings">
                   <p>I'm Vishesh</p>
-                  <p>I'm a Web Developer</p>
-                  <p>I like Photography</p>
+                  <p>I'm a Data Engineer</p>
+                  <p>I love Photography</p>
+                  <p>I love Travelling</p>
                 </div>
                 <p class="text-7 font-weight-500 text-white mb-2 mb-md-3">Welcome</p>
                 <h2 class="text-16 font-weight-600 text-white mb-2 mb-md-3"><span class="typed"></span></h2>
@@ -119,9 +120,9 @@
         
         <div class="row">
           <div class="col-lg-8 text-center text-lg-left">
-            <h2 class="text-7 font-weight-600 mb-3">I'm <span class="text-primary">Vishesh Koul,</span> a Web Developer</h2>
-            <p>Currently a B.Tech Student at Maharshi Dayanand University, Rohtak.</p>
-            <p>With an immature idea of creating mature content, I stated learning web development and have been developing since a while</p>
+            <h2 class="text-7 font-weight-600 mb-3">I'm <span class="text-primary">Vishesh Koul,</span> a Data Engineer</h2>
+            <p>Completed my B.Tech at Maharshi Dayanand University, Rohtak.</p>
+            <p>Where raw data meets refined information powered by Azure & Databricks.</p>
           </div>
           <div class="col-lg-4 mt-5 mt-lg-0">
             <div class="pl-4">
@@ -152,41 +153,41 @@
         <div class="row" >
           <div class="col-lg-11 mx-auto">
             <div class="row">
-              <div class="col-md-6">
+             <!-- <div class="col-md-6">
                 <div class="featured-box style-3 mb-5">
                   <div class="featured-box-icon text-primary bg-white shadow-sm rounded"> <i class="fas fa-palette"></i> </div>
                   <h3>Photography</h3>
-                  <p class="mb-0">I like Photography as a hobby</p>
+                  <p class="mb-0">I like Photography</p>
                 </div>
-              </div>
-              <div class="col-md-6">
+              </div>-->
+             <!-- <div class="col-md-6">
                 <div class="featured-box style-3 mb-5">
                   <div class="featured-box-icon text-primary bg-white shadow-sm rounded"> <i class="fa-regular fas fa-briefcase"></i> </div>
                   <h3>Freelancer</h3>
                   <p class="mb-0">I create landing pages for private business and companies to satisfy their needs</p>
                 </div>
-              </div>
-              <div class="col-md-6" >
+              </div> -->
+              <div class="col-md-12" >
                 <div class="featured-box style-3 mb-5">
                   <div class="featured-box-icon text-primary bg-white shadow-sm rounded"> <i class="fas fa-desktop"></i></div>
-                  <h3>Web Designing</h3>
-                  <p class="mb-0">Curiously work upon the idea of creating beautiful websites with various styles and appeals</p>
+                  <h3>Data Engineer II</h3>
+                  <p class="mb-0">As a Data Engineer II, I focus on building reliable and scalable data pipelines using Azure and Databricks. My role involves collecting, transforming, and organizing data to ensure it flows efficiently across systems and is ready for reporting, analytics, and business use. I work with large-scale data architectures, optimize data workflows, and ensure data quality and performance in every step of the process. My goal is to create clean, maintainable, and high-performing data solutions that support day-to-day operations and long-term strategy.</p>
                 </div>
               </div>
-              <div class="col-md-6" >
+              <!--<div class="col-md-6" >
               <div class="featured-box style-3 mb-5">
                 <div class="featured-box-icon text-primary bg-white shadow-sm rounded"> <i class="fas fa-palette"></i> </div>
                 <h3>Enginnering</h3>
                 <p class="mb-0">I am currently pursuing B.Tech in Computer Science from M.D.U, Rohtak</p>
               </div>
-              </div>
-              <div class="col-md-6" >
+              </div>-->
+             <!-- <div class="col-md-6" >
               <div class="featured-box style-3 mb-5">
                 <div class="featured-box-icon text-primary bg-white shadow-sm rounded"> <i class="fas fa-palette"></i> </div>
                 <h3>Internship</h3>
                 <p class="mb-0">I am working as FrontEnd Web Developer L2 intern</p>
               </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
